Añadi las imagenes al proyecto

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">i
+    <link rel="stylesheet" href="css/style.css">
     <title>Alquileres Marcelo</title>
 </head>
 <body>
@@ -13,11 +13,11 @@
         <!--Configuraciones-->
         <div class="configuraciones">
             <!--Avatar-->
-            <a href="page/cuenta.html"><img src="contenido pagina/avatar.jpg" alt="Avatar"></a>
+            <a href="page/cuenta.html"><img src="contenido-pagina/avatar.jpg" alt="Avatar"></a>
             <!--Configuración-->
-            <a href="page/configuracion.html"><img src="contenido pagina/engranaje.jpg" alt="Engranaje"></a>
+            <a href="page/configuracion.html"><img src="contenido-pagina/engranaje.jpg" alt="Engranaje"></a>
             <!--Ayuda-->
-            <a href="page/ayuda.html"><img src="contenido pagina/pregunta.jpg" alt="Signo de pregunta"></a>
+            <a href="page/ayuda.html"><img src="contenido-pagina/pregunta.png" alt="Signo de pregunta"></a>
         </div>
         <!--Nav-->
         <nav>
@@ -27,7 +27,7 @@
                 <li><a href="">Registrarse</a></li>
                 <li><a href="">Contacto</a></li>
             </ul>
-            <img src="contenido pagina/modo.jpg" alt="Modo">
+            <img src="contenido-pagina/modo.jpg" alt="Modo">
         </nav>
     </header>
     
@@ -41,8 +41,8 @@
                 <input type="text" placeholder="Don Pepito 4564">
                 <input type="button" >
             </form>
-            <img src="contenido pagina/lupa.jpg" alt="Lupa">
-            <img src="contenido pagina/pin-mapa.jpg" alt="Ubicación, Mapa">
+            <img src="contenido-pagina/lupa.jpg" alt="Lupa">
+            <img src="contenido-pagina/pin-mapa.jpg" alt="Ubicación, Mapa">
         </div>
     </section>
     <!--Main-->
@@ -50,52 +50,51 @@
         <!--Propiedades-->
         <section id="propiedades">
             <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido pagina/estrellas.jpg" alt="Estrellas"> 
+                <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
+                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas"> 
+             </div>
+             <div class="propiedad">
+                <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
+                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas"> 
+             </div>
+             <div class="propiedad">
+                <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
+                <img src="contenido-ppagina/estrellas.jpg" alt="Estrellas"> 
              </div>
              <div class="propiedad">
                 <a href="page/propiedad.html"><img src="contenido pagina/casa.jpg" alt="casa"></a>
                 <img src="contenido pagina/estrellas.jpg" alt="Estrellas"> 
              </div>
              <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido pagina/estrellas.jpg" alt="Estrellas"> 
+                <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
+                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas"> 
              </div>
              <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido pagina/estrellas.jpg" alt="Estrellas"> 
+                <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
+                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas"> 
              </div>
              <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido pagina/estrellas.jpg" alt="Estrellas"> 
+                <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
+                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas"> 
              </div>
              <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido pagina/estrellas.jpg" alt="Estrellas"> 
+                <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
+                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas"> 
              </div>
              <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido pagina/estrellas.jpg" alt="Estrellas"> 
+                <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
+                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas"> 
              </div>
-             <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido pagina/estrellas.jpg" alt="Estrellas"> 
-             </div>
-             <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido pagina/estrellas.jpg" alt="Estrellas"> 
-             </div>
-            
         </section>
     </main>
     <!--Footer-->
     <footer>
         <!--Redes-->
         <ul>
-            <li><a href=""><img src="contenido pagina/instagram.jpg" alt="Instagram"></a></li>
-            <li><a href=""><img src="contenido pagina/twitter.jpg" alt="Twitter"></a></li>
-            <li><a href=""><img src="contenido pagina/facebook.jpg" alt="Facebook"></a></li>
-            <li><a href=""><img src="contenido pagina/linkedin" alt="Linkedin"></a></li>
+            <li><a href=""><img src="contenido-pagina/instagram.jpg" alt="Instagram"></a></li>
+            <li><a href=""><img src="contenido-pagina/twitter.jpg" alt="Twitter"></a></li>
+            <li><a href=""><img src="contenido-pagina/facebook.jpg" alt="Facebook"></a></li>
+            <li><a href=""><img src="contenido-pagina/linkedin" alt="Linkedin"></a></li>
         </ul>
         <!--Copyright-->
         <p>&copy; 2023 Alquileres Marcelo.com</p>
