Agregue más imagenes e hice el estilo del header

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <!--Configuraciones-->
         <div class="configuraciones">
             <!--Avatar-->
-            <a href="page/cuenta.html"><img src="contenido-pagina/avatar.jpg" alt="Avatar"></a>
+            <a href="page/cuenta.html"><img class="avatar"src="contenido-pagina/avatar.jpg" alt="Avatar"></a>
             <!--Configuración-->
-            <a href="page/configuracion.html"><img src="contenido-pagina/engranaje.jpg" alt="Engranaje"></a>
+            <a  href="page/configuracion.html"><img class="mas"src="contenido-pagina/engranaje.jpg" alt="Engranaje"></a>
             <!--Ayuda-->
-            <a href="page/ayuda.html"><img src="contenido-pagina/pregunta.png" alt="Signo de pregunta"></a>
+            <a  href="page/ayuda.html"><img class="mas"src="contenido-pagina/pregunta.png" alt="Signo de pregunta"></a>
         </div>
         <!--Nav-->
         <nav>
@@ -27,7 +27,7 @@
                 <li><a href="">Registrarse</a></li>
                 <li><a href="">Contacto</a></li>
             </ul>
-            <img src="contenido-pagina/modo.jpg" alt="Modo">
+            <img class="modo" src="contenido-pagina/modo-dia.png" alt="Modo">
         </nav>
     </header>
     
