Cambie el header

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,30 +8,39 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Alquileres Marcelo</title>
 </head>
+
 <body>
     <!--Header-->
     <header>
         <!--Configuraciones-->
         <div class="configuraciones">
-            <!--Avatar-->
-            <a href="page/cuenta.html"><img class="avatar"src="contenido-pagina/avatar.jpg" alt="Avatar"></a>
-            <!--Configuración-->
-            <a  href="page/configuracion.html"><img class="mas"src="contenido-pagina/engranaje.jpg" alt="Engranaje"></a>
-            <!--Ayuda-->
-            <a  href="page/ayuda.html"><img class="mas"src="contenido-pagina/pregunta.png" alt="Signo de pregunta"></a>
+
+
+
+
+
+
         </div>
         <!--Nav-->
         <nav>
-            <ul>
-                <li><a href="index.html">Inicio</a> </li>
-                <li><a href="">Iniciar seción</a></li>
-                <li><a href="">Registrarse</a></li>
-                <li><a href="">Contacto</a></li>
-            </ul>
-            <img class="modo" src="contenido-pagina/modo-dia.png" alt="Modo">
+            <div class="nav-container">
+                <ul>
+                    <!--Avatar-->
+                    <li><a href="page/cuenta.html"><img class="avatar" src="contenido-pagina/avatar.jpg"
+                                alt="Avatar"></a></li>
+                    <!--Configuración-->
+                    <li><a href="page/configuracion.html"><img class="mas" src="contenido-pagina/engranaje.jpg"
+                                alt="Engranaje"></a></li>
+                    <!--Ayuda-->
+                    <li><a href="page/ayuda.html"><img class="mas" src="contenido-pagina/pregunta.png"
+                                alt="Signo de pregunta"></a></li>
+                </ul>
+                <img class="modo" src="contenido-pagina/modo-dia.png" alt="Modo">
+
+            </div>
         </nav>
     </header>
-    
+
     <section id="hero">
         <!--Banner hero-->
         <h1>Alquileres marcelo</h1>
@@ -39,7 +49,7 @@
         <div class="buscador">
             <form action="form.php" method="post">
                 <input type="text" placeholder="Don Pepito 4564">
-                <input type="button" >
+                <input type="button">
             </form>
             <img src="contenido-pagina/lupa.jpg" alt="Lupa">
             <img src="contenido-pagina/pin-mapa.jpg" alt="Ubicación, Mapa">
@@ -51,40 +61,40 @@
         <section id="propiedades">
             <div class="propiedad">
                 <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas"> 
-             </div>
-             <div class="propiedad">
+                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas">
+            </div>
+            <div class="propiedad">
                 <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas"> 
-             </div>
-             <div class="propiedad">
+                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas">
+            </div>
+            <div class="propiedad">
                 <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido-ppagina/estrellas.jpg" alt="Estrellas"> 
-             </div>
-             <div class="propiedad">
+                <img src="contenido-ppagina/estrellas.jpg" alt="Estrellas">
+            </div>
+            <div class="propiedad">
                 <a href="page/propiedad.html"><img src="contenido pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido pagina/estrellas.jpg" alt="Estrellas"> 
-             </div>
-             <div class="propiedad">
+                <img src="contenido pagina/estrellas.jpg" alt="Estrellas">
+            </div>
+            <div class="propiedad">
                 <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas"> 
-             </div>
-             <div class="propiedad">
+                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas">
+            </div>
+            <div class="propiedad">
                 <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas"> 
-             </div>
-             <div class="propiedad">
+                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas">
+            </div>
+            <div class="propiedad">
                 <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas"> 
-             </div>
-             <div class="propiedad">
+                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas">
+            </div>
+            <div class="propiedad">
                 <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas"> 
-             </div>
-             <div class="propiedad">
+                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas">
+            </div>
+            <div class="propiedad">
                 <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas"> 
-             </div>
+                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas">
+            </div>
         </section>
     </main>
     <!--Footer-->
@@ -100,4 +110,5 @@
         <p>&copy; 2023 Alquileres Marcelo.com</p>
     </footer>
 </body>
+
 </html>
