Arregle el nav y el hero banner. Tambien comente todo el css

--- a/index.html
+++ b/index.html
@@ -12,18 +12,8 @@
 <body>
     <!--Header-->
     <header>
-        <!--Configuraciones-->
-        <div class="configuraciones">
-
-
-
-
-
-
-        </div>
         <!--Nav-->
         <nav>
-            <div class="nav-container">
                 <ul>
                     <!--Avatar-->
                     <li><a href="page/cuenta.html"><img class="avatar" src="contenido-pagina/avatar.jpg"
@@ -34,15 +24,16 @@
                     <!--Ayuda-->
                     <li><a href="page/ayuda.html"><img class="mas" src="contenido-pagina/pregunta.png"
                                 alt="Signo de pregunta"></a></li>
+                    <!--Modo-->
+                    <img class="modo" src="contenido-pagina/modo-dia.png" alt="Modo">      
                 </ul>
-                <img class="modo" src="contenido-pagina/modo-dia.png" alt="Modo">
-
-            </div>
+                
         </nav>
     </header>
 
     <section id="hero">
-        <!--Banner hero-->
+        <div class="presentacion">
+ <!--Banner hero-->
         <h1>Alquileres marcelo</h1>
         <h2>Encuentra tu casa soñada</h2>
         <!--Buscador-->
@@ -54,6 +45,8 @@
             <img src="contenido-pagina/lupa.jpg" alt="Lupa">
             <img src="contenido-pagina/pin-mapa.jpg" alt="Ubicación, Mapa">
         </div>
+        </div>
+       
     </section>
     <!--Main-->
     <main>
