Termine de dar estilos al index, agregar imagenes y hacerlo responsive

--- a/index.html
+++ b/index.html
@@ -14,40 +14,46 @@
     <header>
         <!--Nav-->
         <nav>
-                <ul>
-                    <!--Avatar-->
-                    <li><a href="page/cuenta.html"><img class="avatar" src="contenido-pagina/avatar.jpg"
-                                alt="Avatar"></a></li>
-                    <!--Configuración-->
-                    <li><a href="page/configuracion.html"><img class="mas" src="contenido-pagina/engranaje.jpg"
-                                alt="Engranaje"></a></li>
-                    <!--Ayuda-->
-                    <li><a href="page/ayuda.html"><img class="mas" src="contenido-pagina/pregunta.png"
-                                alt="Signo de pregunta"></a></li>
-                    <!--Modo-->
-                    <img class="modo" src="contenido-pagina/modo-dia.png" alt="Modo">      
-                </ul>
-                
+            <ul>
+                <!--Avatar-->
+                <li><a href="page/cuenta.html"><img class="avatar" src="contenido-pagina/avatar.jpg" alt="Avatar"></a>
+                </li>
+                <!--Configuración-->
+                <li><a href="page/configuracion.html"><img class="mas" src="contenido-pagina/engranaje.jpg"
+                            alt="Engranaje"></a></li>
+                <!--Ayuda-->
+                <li><a href="page/ayuda.html"><img class="mas" src="contenido-pagina/pregunta.png"
+                            alt="Signo de pregunta"></a></li>
+                <!--Modo-->
+                <img class="modo" src="contenido-pagina/modo-dia.png" alt="Modo">
+            </ul>
+
         </nav>
     </header>
+    <div class="container-hero">
+        <div class="background-hero">
+            <!--Banner hero-->
+            <section id="hero">
+                <div class="presentacion">
 
-    <section id="hero">
-        <div class="presentacion">
- <!--Banner hero-->
-        <h1>Alquileres marcelo</h1>
-        <h2>Encuentra tu casa soñada</h2>
-        <!--Buscador-->
-        <div class="buscador">
-            <form action="form.php" method="post">
-                <input type="text" placeholder="Don Pepito 4564">
-                <input type="button">
-            </form>
-            <img src="contenido-pagina/lupa.jpg" alt="Lupa">
-            <img src="contenido-pagina/pin-mapa.jpg" alt="Ubicación, Mapa">
+                    <h1>Alquileres marcelo</h1>
+                    <h2>Encuentra tu casa soñada</h2>
+                    <!--Buscador-->
+                    <div class="buscador">
+                        <form action="form.php" method="post">
+                            <input class="texto" type="text" placeholder="Don Pepito 4564">
+
+                        </form>
+                        <a href="#propiedades"><button class="boton"><img class="lupa" src="contenido-pagina/lupa.png" alt="lupa"></button></a>
+                        <img class="pin-mapa" src="contenido-pagina/pin-mapa.png" alt="Ubicación, Mapa">
+                    </div>
+                </div>
         </div>
-        </div>
-       
-    </section>
+
+
+        </section>
+    </div>
+
     <!--Main-->
     <main>
         <!--Propiedades-->
@@ -62,10 +68,10 @@
             </div>
             <div class="propiedad">
                 <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido-ppagina/estrellas.jpg" alt="Estrellas">
+                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas">
             </div>
             <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido pagina/casa.jpg" alt="casa"></a>
+                <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
                 <img src="contenido pagina/estrellas.jpg" alt="Estrellas">
             </div>
             <div class="propiedad">
@@ -93,7 +99,7 @@
     <!--Footer-->
     <footer>
         <!--Redes-->
-        <ul>
+        <ul class="redes">
             <li><a href=""><img src="contenido-pagina/instagram.jpg" alt="Instagram"></a></li>
             <li><a href=""><img src="contenido-pagina/twitter.jpg" alt="Twitter"></a></li>
             <li><a href=""><img src="contenido-pagina/facebook.jpg" alt="Facebook"></a></li>
