Añadi el footer y el header a todos los html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 
 <head>
+    <!--UTF-8(unicode)|para que hacepte caracteres especiales-->
     <meta charset="UTF-8">
+    <!--Para que sea compatible con todos los navegadores-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!--Responsive-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Link hoja de estilos-->
     <link rel="stylesheet" href="css/style.css">
     <title>Alquileres Marcelo</title>
 </head>
