--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--Hecho por Lucio Capezzuto-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -19,20 +20,22 @@
         <!--Nav-->
         <nav>
             <ul>
+                <!--Logo-->
+                <li><a href="index.html"><img class="logo" src="contenido-pagina/logo.png" alt="Casa"></a></li>
                 <!--Avatar-->
-                <li><a href="page/cuenta.html"><img class="avatar" src="contenido-pagina/avatar.jpg" alt="Avatar"></a>
-                </li>
+                <li><a href="page/cuenta.html"><img class="avatar" src="contenido-pagina/avatar.jpg" alt="Avatar"></a></li>
                 <!--Configuración-->
-                <li><a href="page/configuracion.html"><img class="mas" src="contenido-pagina/engranaje.jpg"
-                            alt="Engranaje"></a></li>
+                <li><a href="page/configuracion.html"><img class="mas" src="contenido-pagina/engranaje.jpg"alt="Engranaje"></a></li>
                 <!--Ayuda-->
-                <li><a href="page/ayuda.html"><img class="mas" src="contenido-pagina/pregunta.png"
-                            alt="Signo de pregunta"></a></li>
-                <!--Modo-->
-                <img class="modo" src="contenido-pagina/modo-dia.png" alt="Modo">
-            </ul>
+                <li><a href="page/ayuda.html"><img class="mas" src="contenido-pagina/pregunta.png"alt="Signo de pregunta"></a></li>
 
+            </ul>
         </nav>
+        <div class="modo-container">
+            <!--Modo-->
+            <img class="modo" src="contenido-pagina/modo-dia.png" alt="Modo">
+        </div>
+
     </header>
     <div class="container-hero">
         <div class="background-hero">
@@ -48,13 +51,12 @@
                             <input class="texto" type="text" placeholder="Don Pepito 4564">
 
                         </form>
-                        <a href="#propiedades"><button class="boton"><img class="lupa" src="contenido-pagina/lupa.png" alt="lupa"></button></a>
+                        <a href="#propiedades"><button class="boton"><img class="lupa" src="contenido-pagina/lupa.png"
+                                    alt="lupa"></button></a>
                         <img class="pin-mapa" src="contenido-pagina/pin-mapa.png" alt="Ubicación, Mapa">
                     </div>
                 </div>
         </div>
-
-
         </section>
     </div>
 
@@ -104,10 +106,10 @@
     <footer>
         <!--Redes-->
         <ul class="redes">
-            <li><a href=""><img src="contenido-pagina/instagram.jpg" alt="Instagram"></a></li>
-            <li><a href=""><img src="contenido-pagina/twitter.jpg" alt="Twitter"></a></li>
-            <li><a href=""><img src="contenido-pagina/facebook.jpg" alt="Facebook"></a></li>
-            <li><a href=""><img src="contenido-pagina/linkedin" alt="Linkedin"></a></li>
+            <li><a href=""><img src="contenido-pagina/instagram.png" alt="Instagram"></a></li>
+            <li><a href=""><img src="contenido-pagina/twitter.png" alt="Twitter"></a></li>
+            <li><a href=""><img src="contenido-pagina/facebook.png" alt="Facebook"></a></li>
+            <li><a href=""><img src="contenido-pagina/linkedin.png" alt="Linkedin"></a></li>
         </ul>
         <!--Copyright-->
         <p>&copy; 2023 Alquileres Marcelo.com</p>
