Continuo con la pagina de ayuda(Buscador)

--- a/index.html
+++ b/index.html
@@ -42,22 +42,18 @@
             <!--Banner hero-->
             <section id="hero">
                 <div class="presentacion">
-
-                    <h1>Alquileres marcelo</h1>
-                    <h2>Encuentra tu casa soñada</h2>
+                        <h1>Alquileres marcelo</h1>
+                        <h2>Encuentra tu casa soñada</h2>
                     <!--Buscador-->
                     <div class="buscador">
                         <form action="form.php" method="post">
                             <input class="texto" type="text" placeholder="Don Pepito 4564">
-
                         </form>
-                        <a href="#propiedades"><button class="boton"><img class="lupa" src="contenido-pagina/lupa.png"
-                                    alt="lupa"></button></a>
+                        <a href="#propiedades"><button class="boton"><img class="lupa" src="contenido-pagina/lupa.png" alt="lupa"></button></a>
                         <img class="pin-mapa" src="contenido-pagina/pin-mapa.png" alt="Ubicación, Mapa">
                     </div>
                 </div>
-        </div>
-        </section>
+            </section>
     </div>
 
     <!--Main-->
