Ultimo commt antes de la preentrega 2, le di estilo a todos los html de forma responsive

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
     </header>
-    <div class="container-hero">
+    
         <div class="background-hero">
             <!--Banner hero-->
             <section id="hero">
@@ -54,10 +54,11 @@
                     </div>
                 </div>
             </section>
-    </div>
+        </div>
+    
 
     <!--Main-->
-    <main>
+    <main id="main-home">
         <!--Propiedades-->
         <section id="propiedades">
             <div class="propiedad">
