corregí algunos errores del index y agregue contenido configuracón en la parte de personalización

--- a/index.html
+++ b/index.html
@@ -63,39 +63,39 @@
         <section id="propiedades">
             <div class="propiedad">
                 <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas">
+                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
             </div>
             <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas">
+                <a href="page/propiedad.html"><img src="contenido-pagina/casa-duende.jpg" alt="casa"></a>
+                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
             </div>
             <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas">
+                <a href="page/propiedad.html"><img src="contenido-pagina/casa-enanos.jpg" alt="casa"></a>
+                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
             </div>
             <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido pagina/estrellas.jpg" alt="Estrellas">
+                <a href="page/propiedad.html"><img src="contenido-pagina/casa-humilde.jpg" alt="casa"></a>
+                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
             </div>
             <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas">
+                <a href="page/propiedad.html"><img src="contenido-pagina/casaLGTB.jpg" alt="casa"></a>
+                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
             </div>
             <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas">
+                <a href="page/propiedad.html"><img src="contenido-pagina/casa-mercadolibre.jpg" alt="casa"></a>
+                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
             </div>
             <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas">
+                <a href="page/propiedad.html"><img src="contenido-pagina/casablancaLGTB.jpg" alt="casa"></a>
+                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
             </div>
             <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas">
+                <a href="page/propiedad.html"><img src="contenido-pagina/casaGod.jpg" alt="casa"></a>
+                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
             </div>
             <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
-                <img src="contenido-pagina/estrellas.jpg" alt="Estrellas">
+                <a href="page/propiedad.html"><img src="contenido-pagina/casa-pank.jpg" alt="casa"></a>
+                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
             </div>
         </section>
     </main>
