--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                 <!--Logo-->
                 <li><a href="index.html"><img class="logo" src="contenido-pagina/logo.png" alt="Casa"></a></li>
                 <!--Avatar-->
-                <li><a href="page/cuenta.html"><img class="avatar" src="contenido-pagina/avatar.jpg" alt="Avatar"></a></li>
+                <li><a href="page/cuenta.html">Cuenta</a></li>
                 <!--Configuración-->
-                <li><a href="page/configuracion.html"><img class="mas" src="contenido-pagina/engranaje.jpg"alt="Engranaje"></a></li>
+                <li><a href="page/configuracion.html">Configuración</a></li>
                 <!--Ayuda-->
-                <li><a href="page/ayuda.html"><img class="mas" src="contenido-pagina/pregunta.png"alt="Signo de pregunta"></a></li>
+                <li><a href="page/ayuda.html">Ayuda</a></li>
 
             </ul>
         </nav>
