--- a/index.html
+++ b/index.html
@@ -62,39 +62,39 @@
         <!--Propiedades-->
         <section id="propiedades">
             <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido-pagina/casa.jpg" alt="casa"></a>
+                <a href="page/propiedad.html"><img src="contenido-pagina/casa1.jpg" alt="casa"></a>
                 <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
             </div>
             <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido-pagina/casa-duende.jpg" alt="casa"></a>
+                <a href="page/propiedad.html"><img src="contenido-pagina/casa2.jpg" alt="casa"></a>
                 <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
             </div>
             <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido-pagina/casa-enanos.jpg" alt="casa"></a>
+                <a href="page/propiedad.html"><img src="contenido-pagina/casa3.jpg" alt="casa"></a>
                 <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
             </div>
             <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido-pagina/casa-humilde.jpg" alt="casa"></a>
+                <a href="page/propiedad.html"><img src="contenido-pagina/casa4.jpg" alt="casa"></a>
                 <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
             </div>
             <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido-pagina/casaLGTB.jpg" alt="casa"></a>
+                <a href="page/propiedad.html"><img src="contenido-pagina/casa5.jpg" alt="casa"></a>
                 <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
             </div>
             <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido-pagina/casa-mercadolibre.jpg" alt="casa"></a>
+                <a href="page/propiedad.html"><img src="contenido-pagina/casa6.jpg" alt="casa"></a>
                 <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
             </div>
             <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido-pagina/casablancaLGTB.jpg" alt="casa"></a>
+                <a href="page/propiedad.html"><img src="contenido-pagina/casa7.jpg" alt="casa"></a>
                 <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
             </div>
             <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido-pagina/casaGod.jpg" alt="casa"></a>
+                <a href="page/propiedad.html"><img src="contenido-pagina/casa8.jpg" alt="casa"></a>
                 <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
             </div>
             <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido-pagina/casa-pank.jpg" alt="casa"></a>
+                <a href="page/propiedad.html"><img src="contenido-pagina/casa9.jpg" alt="casa"></a>
                 <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
             </div>
         </section>
