comit final entrega proyecto

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <!--Banner hero-->
             <section id="hero">
                 <div class="presentacion">
-                        <h1>Alquileres marcelo</h1>
-                        <h2>Encuentra tu casa soñada</h2>
+                    <h1>Alquileres marcelo</h1>
+                    <h2>Encuentra tu casa soñada</h2>
                     <!--Buscador-->
                     <div class="buscador">
                         <form action="form.php" method="post">
@@ -62,40 +62,40 @@
         <!--Propiedades-->
         <section id="propiedades">
             <div class="propiedad">
-                <a href="page/propiedad.html"><img src="contenido-pagina/casa1.jpg" alt="casa"></a>
-                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
+                <a href="page/propiedad.html"><img src="contenido-pagina/departamento/interior.jpg" alt="casa"></a>
+                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas de calificación - Calificación de 4 estrellas">
             </div>
             <div class="propiedad">
                 <a href="page/propiedad.html"><img src="contenido-pagina/casa2.jpg" alt="casa"></a>
-                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
+                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas de calificación - Calificación de 4 estrellas">
             </div>
             <div class="propiedad">
                 <a href="page/propiedad.html"><img src="contenido-pagina/casa3.jpg" alt="casa"></a>
-                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
+                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas de calificación - Calificación de 4 estrellas">
             </div>
             <div class="propiedad">
                 <a href="page/propiedad.html"><img src="contenido-pagina/casa4.jpg" alt="casa"></a>
-                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
+                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas de calificación - Calificación de 4 estrellas">
             </div>
             <div class="propiedad">
                 <a href="page/propiedad.html"><img src="contenido-pagina/casa5.jpg" alt="casa"></a>
-                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
+                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas de calificación - Calificación de 4 estrellas">
             </div>
             <div class="propiedad">
                 <a href="page/propiedad.html"><img src="contenido-pagina/casa6.jpg" alt="casa"></a>
-                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
+                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas de calificación - Calificación de 4 estrellas">
             </div>
             <div class="propiedad">
                 <a href="page/propiedad.html"><img src="contenido-pagina/casa7.jpg" alt="casa"></a>
-                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
+                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas de calificación - Calificación de 4 estrellas">
             </div>
             <div class="propiedad">
                 <a href="page/propiedad.html"><img src="contenido-pagina/casa8.jpg" alt="casa"></a>
-                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
+                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas de calificación - Calificación de 4 estrellas">
             </div>
             <div class="propiedad">
                 <a href="page/propiedad.html"><img src="contenido-pagina/casa9.jpg" alt="casa"></a>
-                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas">
+                <img class="estrellas" src="contenido-pagina/estrellas.png" alt="Estrellas de calificación - Calificación de 4 estrellas">
             </div>
         </section>
     </main>
@@ -103,11 +103,15 @@
     <footer>
         <!--Redes-->
         <ul class="redes">
-            <li><a href=""><img src="contenido-pagina/instagram.png" alt="Instagram"></a></li>
-            <li><a href=""><img src="contenido-pagina/twitter.png" alt="Twitter"></a></li>
-            <li><a href=""><img src="contenido-pagina/facebook.png" alt="Facebook"></a></li>
-            <li><a href=""><img src="contenido-pagina/linkedin.png" alt="Linkedin"></a></li>
-        </ul>
+            <li><a href="https://www.instagram.com/"><img src="contenido-pagina/instagram.png"
+                  alt="Logo de Instagram - Enlace al perfil de la empresa"></a></li>
+            <li><a href="https://twitter.com/"><img src="contenido-pagina/twitter.png"
+                  alt="Logo de Twitter - Enlace al perfil de la empresa"></a></li>
+            <li><a href="https://facebook.com/"><img src="contenido-pagina/facebook.png"
+                  alt="Logo de Facebook - Enlace al perfil de la empresa"></a></li>
+            <li><a href="https://www.linkedin.com/"><img src="contenido-pagina/linkedin.png"
+                  alt="Logo de Linkedin - Enlace al perfil de la empresa"></a></li>
+          </ul>
         <!--Copyright-->
         <p>&copy; 2023 Alquileres Marcelo.com</p>
     </footer>
